mule-user-guide/v/3.6/streaming-data-processing-with-datamapper.adoc
= 使用DataMapper处理数据流
:keywords: datamapper

[NOTE]
在Mule ESB 3.x的所有当前和未来版本中，DataMapper将继续得到完全支持，但它将在Mule 4.0中被删除。我们建议，如果您希望利用 link:/mule-user-guide/v/3.8/dataweave[DataWeave]的新功能，或者如果您启动新项目，请立即升级。但是，如果您没有迫切需要利用新功能，我们建议您等到Mule 4.0发布。


在处理大型数据集时特别有用，Anypoint DataMapper支持流式数据输入和输出。例如，当从一个非常大的输入文件读取信息时，可以使用数据流，避免DataMapper将整个文件加载到内存中。相反，DataMapper作为一个流水线工作：它依次读取文件并将数据存储在缓存中，执行数据映射，将输出发送到下一个转换器，清空缓存，然后重新开始。使用此过程，DataMapper可以仅使用大约75 MB的RAM来解析500 MB CSV文件，从而显着提高性能和资源利用率。

*  Anypoint DataMapper流支持CSV和固定宽度的输入和输出格式。
* 您可以配置流缓存的大小以优化性能。

== 假设

本文档假定读者熟悉Anypoint DataMapper Transformer。如果您不是，请从头开始： link:/anypoint-studio/v/6/datamapper-user-guide-and-reference[DataMapper用户指南和参考]。有关DataMapper中所有可用工具的列表，请参阅 link:/mule-user-guide/v/3.6/datamapper-visual-reference[DataMapper可视化参考]。

 查看DataMapper文档目录

*  link:/mule-user-guide/v/3.6/datamapper-concepts[DataMapper概念]
*  link:/mule-user-guide/v/3.6/datamapper-visual-reference[DataMapper可视化参考]
*  link:/mule-user-guide/v/3.6/defining-datamapper-input-and-output-metadata[定义DataMapper输入和输出元数据]
**  link:/mule-user-guide/v/3.6/defining-metadata-using-edit-fields[使用编辑字段定义元数据]
**  link:/mule-user-guide/v/3.6/pojo-class-bindings-and-factory-classes[POJO类绑定和工厂类]
*  link:/mule-user-guide/v/3.6/building-a-mapping-flow-in-the-graphical-mapping-editor[在图形映射编辑器中构建映射流程]
**  link:/mule-user-guide/v/3.6/mapping-flow-input-and-output-properties[映射流量输入和输出属性]
**  link:/mule-user-guide/v/3.6/datamapper-input-error-policy-for-bad-input-data[DataMapper输入错误政策坏输入数据]
**  link:/mule-user-guide/v/3.6/using-datamapper-lookup-tables[使用DataMapper查找表]
**  link:/mule-user-guide/v/3.6/streaming-data-processing-with-datamapper[使用DataMapper处理数据流]
*  link:/mule-user-guide/v/3.6/updating-metadata-in-an-existing-mapping[在现有的映射中更新元数据]
*  link:/mule-user-guide/v/3.6/mapping-elements-inside-lists[映射列表中的元素]
*  link:/anypoint-studio/v/5/previewing-datamapper-results-on-sample-data[在示例数据上预览DataMapper结果]
*  link:/mule-user-guide/v/3.6/datamapper-examples[DataMapper示例]
*  link:/mule-user-guide/v/3.6/datamapper-supplemental-topics[DataMapper补充主题]
**  link:/mule-user-guide/v/3.6/choosing-mel-or-ctl2-as-scripting-engine[选择MEL或CTL2作为脚本引擎]
**  link:/mule-user-guide/v/3.6/datamapper-fixed-width-input-format[DataMapper固定宽度输入格式]
**  link:/mule-user-guide/v/3.6/datamapper-flat-to-structured-and-structured-to-flat-mapping[DataMapper平面到结构化和结构化到平面的映射]

== 在DataMapper中设置流

要在数据映射流中设置Streaming参数，请按照下列步骤操作：

. 在DataMapper视图中，单击*Properties*图标（如下突出显示）。
+
image:datamapper1.png[图片]

.  DataMapper显示通用配置对话框，如下所示。点击*Streaming*。
+
image:datamapper2.png[图片]

.  在*Pipe Size*输入字段中，输入所需的缓存大小。默认值是2048.请记住：
* 处理文件时，*Pipe Size*的值以字节表示
* 处理集合时，值以集合元素的数量表示

=== 处理异常

如果映射中发生异常，DataMapper会尽快停止流引擎。为避免发生故障时出现意外后果（例如只将部分行插入数据库），请使用 link:/mule-user-guide/v/3.6/transactions-configuration-reference[交易]。

== 示例

本示例说明了Anypoint DataMapper中Streaming功能的使用。

link:/mule-user-guide/v/3.6/http-connector[HTTP连接器]接收一个CSV文件，然后将其传递给DataMapper。 DataMapper将输入数据从CSV映射到POJO。 link:/mule-user-guide/v/3.6/database-connector[数据库连接器]将数据插入到外部数据库中。在这种情况下，DataMapper和数据库连接器作为管道并行工作，进一步提高了应用程序的性能。

image:datamapper3.jpeg[3]

下图显示了为本例配置的DataMapper视图。

image:datamapper4.jpeg[4]

最后，输出连接器接收映射列表，然后将每个项目作为值存储在外部数据库的SQL查询中。

[source, code, linenums]
----
INSERT INTO Persons (name, city, email, phone) VALUES (#[payload.name], #[payload.city], #[payload.email], #[payload.phone])
----
